WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32631
MSAA: Accessibility role of text nodes is wrong
https://bugs.webkit.org/show_bug.cgi?id=32631
Summary
MSAA: Accessibility role of text nodes is wrong
Jon Honeycutt
Reported
2009-12-16 13:45:08 PST
The accessibility role of text nodes should be ROLE_SYSTEM_TEXT, not ROLE_SYSTEM_STATICTEXT, to match IE and Firefox. <
rdar://problem/7369084
>
Attachments
patch
(10.40 KB, patch)
2009-12-16 16:35 PST
,
Jon Honeycutt
alice.barraclough
: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2009-12-16 16:35:56 PST
Created
attachment 45022
[details]
patch
WebKit Review Bot
Comment 2
2009-12-16 16:39:20 PST
style-queue ran check-webkit-style on
attachment 45022
[details]
without any errors.
Jon Honeycutt
Comment 3
2009-12-16 21:58:25 PST
Committed in
r52233
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug