WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -85,6 +85,7 @@ AccessibilityRenderObject::AccessibilityRenderObject(RenderObject* renderer)
     , m_renderer(renderer)
     , m_ariaRole(UnknownRole)
     , m_childrenDirty(false)
+    , m_roleForMSAA(UnknownRole)
 {
     updateAccessibilityRole();
 #ifndef NDEBUG
@@ -3111,6 +3112,19 @@ String AccessibilityRenderObject::descriptionForMSAA() const
     }
 
     return String();
+}
+
+AccessibilityRole AccessibilityRenderObject::roleValueForMSAA() const
+{
+    if (m_roleForMSAA != UnknownRole)
+        return m_roleForMSAA;
+
+    if (m_renderer && m_renderer->isText())
+        m_roleForMSAA = EditableTextRole;
+    else
+        m_roleForMSAA = m_role;
+
+    return m_roleForMSAA;
 }
 
 } // namespace WebCore
